rama-macros/tests/as_ref/fail/generics.rs
use rama::service::context::AsRef;

#[derive(Clone, AsRef)]
struct AppState<T> {
    foo: T,
}

fn main() {}
