rama-macros/tests/as_ref/fail/generics.stderr
error: `#[derive(AsRef)]` doesn't support generics
 --> tests/as_ref/fail/generics.rs:4:16
  |
4 | struct AppState<T> {
  |                ^^^
